# cp

./: .clang-format  .gitignore  README.md  justfile  makefile  note.md  pyproject.toml  readme.md
atcoder/: .clang-format  .clangd  Makefile  README.md  abc373_b.c  abc373_c.c  abc376_a.c  abc376_c.c  abc377_c.c  abc377_d.c  abc378_c.c  abc380_b.c  abc380_d.c  abc382_b.c  abc383_a.c  abc383_b.c  abc384_a.c  abc384_b.c  abc387_b.c  compile_flags.txt  gent.sh  gt.sh  practice_1.cpp  practice_2.cpp  tpl.cpp
codeforces/: .clang-format  .clangd  2027_a.c  2027_b.c  2031_a.c  2031_b.c  2031_c.c  2039_a.c  2039_b.c  2039_c1.c  527_a.c  Makefile  README.md  gent.sh  tpl.cpp  util.py
data_structure/: graph.cc  graph.cpp  graph_adj_list.cpp  merge_sort.cc  quick_sort.cc
datastructure/: bst.cc  combination_permutation.cc  heap_sort.cc
docs/: bitwise_operation.md
dsa/: bst.cpp  combination_permutation.cc  dijkstra.py  floyd_warshall.py  merge_sort.cpp  quick_sort.cpp  quickselect.py  segment_tree.py
geeksforgeeks/: a.out  how-many-xs.c  min-coin.c  number-of-coins.c  pair-the-minimum.c  print-an-array-in-pendulum-arrangement.c  product-of-prime-factors.c
leetcode/: 11.container-with-most-water.cpp  12.integer-to-roman.cpp  1232.check-if-it-is-a-straight-line.cpp  127.word-ladder.cpp  1295.find-numbers-with-even-number-of-digits.cpp  13.roman-to-integer.cpp  1329.sort-the-matrix-diagonally.cpp  141.linked-list-cycle.cpp  1442.count-triplets-that-can-form-two-arrays-of-equal-xor.cpp  1443.minimum-time-to-collect-all-apples-in-a-tree.cpp  147.insertion-sort-list.cpp  (+56 more)
(+691 files in other folders)
